Bug 1874093 - Pass old style rather than specific structs to CalcDifference. r=TYLin

No behavior change (maybe a bit cheaper in the "no style changed" case).

Differential Revision: https://phabricator.services.mozilla.com/D198605